--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,102 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
     android:orientation="vertical"
-    android:paddingHorizontal="8dp"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:paddingLeft="10sp"
+    android:paddingRight="10sp"
+    >
 
     <TextView
+        android:layout_marginBottom="20sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:gravity="center"
         android:text="Employee App"
+        android:textSize="20sp"
         android:textColor="@color/white"
-        android:textSize="30sp"
+        android:gravity="center"
         tools:ignore="MissingConstraints" />
 
     <EditText
-        android:id="@+id/tv_name"
+        android:layout_marginBottom="10sp"
+        android:id="@+id/ed_name"
         android:layout_width="match_parent"
         android:layout_height="47dp"
-        android:layout_marginBottom="10sp"
         android:background="@color/white"
         android:hint="Enter Employee Name"
-        android:paddingHorizontal="12dp"
         tools:layout_editor_absoluteX="190dp"
         tools:layout_editor_absoluteY="192dp" />
 
     <EditText
-        android:id="@+id/tv_des"
+        android:layout_marginBottom="10sp"
+        android:id="@+id/ed_des"
         android:layout_width="match_parent"
         android:layout_height="47dp"
-        android:layout_marginBottom="10sp"
         android:background="@color/white"
         android:hint="Enter Designation"
-        android:paddingHorizontal="12dp"
         tools:layout_editor_absoluteX="190dp"
         tools:layout_editor_absoluteY="192dp" />
 
     <EditText
-        android:id="@+id/tv_salary"
+        android:layout_marginBottom="10sp"
+        android:id="@+id/ed_salary"
         android:layout_width="match_parent"
         android:layout_height="47dp"
-        android:layout_marginBottom="10sp"
         android:background="@color/white"
         android:hint="Enter Salary"
-        android:paddingHorizontal="12dp"
         tools:layout_editor_absoluteX="190dp"
         tools:layout_editor_absoluteY="192dp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
         <Button
+            android:layout_marginLeft="10sp"
+            android:backgroundTint="#AEAEAE"
             android:id="@+id/btn_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#AEAEAE"
             android:text="Add Employee"
+            android:textSize="11dp"
             android:textColor="@color/black"
-            android:textSize="12dp"
             tools:layout_editor_absoluteX="104dp"
             tools:layout_editor_absoluteY="314dp" />
 
         <Button
+            android:layout_marginLeft="10sp"
+            android:backgroundTint="#AEAEAE"
             android:id="@+id/btn_Update"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:backgroundTint="#AEAEAE"
             android:text="Update Record"
+            android:textSize="11dp"
             android:textColor="@color/black"
-            android:textSize="12dp"
             tools:layout_editor_absoluteX="104dp"
             tools:layout_editor_absoluteY="314dp" />
 
         <Button
+            android:layout_marginLeft="10sp"
+            android:backgroundTint="#AEAEAE"
             android:id="@+id/btn_delete"
+            android:textSize="11dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:backgroundTint="#AEAEAE"
             android:text="Delete"
             android:textColor="@color/black"
-            android:textSize="12dp"
             tools:layout_editor_absoluteX="104dp"
             tools:layout_editor_absoluteY="314dp" />
     </LinearLayout>
 
 
+
     <androidx.recyclerview.widget.RecyclerView
+        android:paddingTop="10sp"
+        android:id="@+id/rcv_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="10dp" />
+        />
 
 
 </LinearLayout>
