--- a/app/src/main/res/layout/list.xml
+++ b/app/src/main/res/layout/list.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:weightSum="4"
+    android:paddingBottom="20dp"
     >
     <LinearLayout
         android:layout_width="wrap_content"
